updated part with a comment

--- a/p8105_hw4_vt2263_p2.Rmd
+++ b/p8105_hw4_vt2263_p2.Rmd
@@ -91,6 +91,5 @@ data_p2%>%
     labs(title = "Plot of GDP Values over Time",
          x = "Time",
          y = "GDP")
-
-
 ```
+*Looking at the graphs, when the governments with democratic presidents seize power, it shows the higher GDP
