I deleted the first graph.

--- a/p8105_hw4_vt2263_p2.Rmd
+++ b/p8105_hw4_vt2263_p2.Rmd
@@ -10,6 +10,8 @@ output:
     toc_float:
       collapse: true
       smooth_scroll: false
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -74,17 +76,6 @@ Datasets `data_pols_clean` and `data_gdp_clean` were merged by `date` variable. 
 data_p2%>%
   filter(!is.na(gdp) & !gdp == ".")%>% 
     select(date, president, gdp)%>%
-    ggplot(aes(x= date, y = gdp))+geom_point(alpha = 0.5)+ geom_smooth(aes(group = president, 
-            color =     president), se = FALSE, show.legend = FALSE)+ facet_grid(. ~president)+
-            theme(legend.position = "bottom")+
-            labs(title = "GDP Values for Each Party over Time",
-                 x = "Time",
-                 y = "GDP",
-                 caption = "Figure 1") 
-
-data_p2%>%
-  filter(!is.na(gdp) & !gdp == ".")%>% 
-    select(date, president, gdp)%>%
     ggplot(aes(x = date, y = gdp, color = president)) +
     geom_point(alpha = 0.5) +
     geom_smooth(se = FALSE) +
@@ -92,7 +83,7 @@ data_p2%>%
     labs(title = "Plot of GDP Values over Time",
          x = "Time",
          y = "GDP",
-         caption = "Figure 2")
+         caption = "Figure 1")
 ```
 
-**Figure 1** and **Figure 2** shows GDP over time for both government parties (democratic and republican, or gop). Loess smoother used to approximate GOP trend over time for both parties reveals that when the governments with democratic presidents seize power, it shows the higher GDP. However, the GDP trend seems to change after 2010, but more data is needed to state that with certainty.  
+**Figure 1** shows GDP over time for both government parties (democratic and republican, or gop). Loess smoother used to approximate GOP trend over time for both parties reveals that when the governments with democratic presidents seize power, it shows the higher GDP. However, the GDP trend seems to change after 2010, but more data is needed to state that with certainty.  
